Go back to sec from section

--- a/content/21.data_object_subsections.md
+++ b/content/21.data_object_subsections.md
@@ -1,4 +1,4 @@
-#### Arbitrary grid {#section:dobj-arbitrary_grid}
+#### Arbitrary grid {#sec:dobj-arbitrary_grid}
 
 *Arguments*: 
 
@@ -15,7 +15,7 @@ arbitrary boxes around particles can be drawn and particle deposition
 fields can be created.  This object will refuse to generate any fluid
 fields.
 
-#### Bool {#section:dobj-bool}
+#### Bool {#sec:dobj-bool}
 
 *Arguments*: 
 
@@ -30,7 +30,7 @@ of the bitwise operations (&, \|, ^, \~) on one or two other data
 objects.  These correspond to the appropriate boolean operations, and
 the resultant object can be nested.
 
-#### Covering grid {#section:dobj-covering_grid}
+#### Covering grid {#sec:dobj-covering_grid}
 
 *Arguments*: 
 
@@ -42,7 +42,7 @@ A 3D region with all data extracted to a single, specified resolution.
 Left edge should align with a cell boundary, but defaults to the
 closest cell boundary.
 
-#### Cut region {#section:dobj-cut_region}
+#### Cut region {#sec:dobj-cut_region}
 
 *Arguments*: 
 
@@ -52,7 +52,7 @@ closest cell boundary.
 This is a data object designed to allow individuals to apply logical
 operations to fields and filter as a result of those cuts.
 
-#### Cutting {#section:dobj-cutting}
+#### Cutting {#sec:dobj-cutting}
 
 *Arguments*: 
 
@@ -67,7 +67,7 @@ coordinate.  It attempts to guess an 'north' vector, which can be
 overridden, and then it pixelizes the appropriate data onto the plane
 without interpolation.
 
-#### Data collection {#section:dobj-data_collection}
+#### Data collection {#sec:dobj-data_collection}
 
 *Arguments*: 
 
@@ -76,7 +76,7 @@ without interpolation.
 By selecting an arbitrary *object_list*, we can act on those grids.
 Child cells are not returned.
 
-#### Disk {#section:dobj-disk}
+#### Disk {#sec:dobj-disk}
 
 *Arguments*: 
 
@@ -89,7 +89,7 @@ By providing a *center*, a *normal*, a *radius* and a *height* we can
 define a cylinder of any proportion.  Only cells whose centers are
 within the cylinder will be selected.
 
-#### Ellipsoid {#section:dobj-ellipsoid}
+#### Ellipsoid {#sec:dobj-ellipsoid}
 
 *Arguments*: 
 
@@ -104,7 +104,7 @@ By providing a *center*,*A*,*B*,*C*,*e0*,*tilt* we can define a
 ellipsoid of any proportion.  Only cells whose centers are within the
 ellipsoid will be selected.
 
-#### Intersection {#section:dobj-intersection}
+#### Intersection {#sec:dobj-intersection}
 
 *Arguments*: 
 
@@ -116,7 +116,7 @@ returns the intersection of all of the sub-objects; it is designed to
 be a faster method than chaining & ("and") operations to create a
 single, large intersection.
 
-#### Minimal sphere {#section:dobj-minimal_sphere}
+#### Minimal sphere {#sec:dobj-minimal_sphere}
 
 *Arguments*: 
 
@@ -125,7 +125,7 @@ single, large intersection.
 
 Build the smallest sphere that encompasses a set of points.
 
-#### Octree {#section:dobj-octree}
+#### Octree {#sec:dobj-octree}
 
 *Arguments*: 
 
@@ -137,7 +137,7 @@ A 3D region with all the data filled into an octree.  This container
 will mean deposit particle fields onto octs using a kernel and SPH
 smoothing.
 
-#### Ortho ray {#section:dobj-ortho_ray}
+#### Ortho ray {#sec:dobj-ortho_ray}
 
 *Arguments*: 
 
@@ -150,7 +150,7 @@ specific coordinate.  This object is typically accessed through the
 arrays have their dimensionality reduced to one, and an ordered list
 of points at an (x,y) tuple along `axis` are available.
 
-#### Particle proj {#section:dobj-particle_proj}
+#### Particle proj {#sec:dobj-particle_proj}
 
 *Arguments*: 
 
@@ -160,7 +160,7 @@ of points at an (x,y) tuple along `axis` are available.
 
 A projection operation optimized for SPH particle data.
 
-#### Point {#section:dobj-point}
+#### Point {#sec:dobj-point}
 
 *Arguments*: 
 
@@ -168,7 +168,7 @@ A projection operation optimized for SPH particle data.
 
 A 0-dimensional object defined by a single point
 
-#### Quad proj {#section:dobj-quad_proj}
+#### Quad proj {#sec:dobj-quad_proj}
 
 *Arguments*: 
 
@@ -190,7 +190,7 @@ mechanism for projections.  It will not run in parallel, but serial
 runs should be substantially faster.  Note also that lines of sight
 are integrated at every projected finest-level cell.
 
-#### Ray {#section:dobj-ray}
+#### Ray {#sec:dobj-ray}
 
 *Arguments*: 
 
@@ -205,7 +205,7 @@ points at an (x,y) tuple along `axis` are available, as is the `t`
 field, which corresponds to a unitless measurement along the ray from
 start to end.
 
-#### Region {#section:dobj-region}
+#### Region {#sec:dobj-region}
 
 *Arguments*: 
 
@@ -219,7 +219,7 @@ A 3D region of data with an arbitrary center.  Takes an array of three
 extends past the edges of the domain, no data will be found there,
 though the object's `left_edge` or `right_edge` are not modified.
 
-#### Slice {#section:dobj-slice}
+#### Slice {#sec:dobj-slice}
 
 *Arguments*: 
 
@@ -234,7 +234,7 @@ then indexing them.  It is more appropriately thought of as a slice
 'operator' than an object, however, as its field and coordinate can
 both change.
 
-#### Smoothed covering grid {#section:dobj-smoothed_covering_grid}
+#### Smoothed covering grid {#sec:dobj-smoothed_covering_grid}
 
 *Arguments*: 
 
@@ -249,7 +249,7 @@ interpolating to fill the region to level 1, replacing any cells
 actually covered by level 1 data, and then recursively repeating this
 process until it reaches the specified `level`.
 
-#### Sphere {#section:dobj-sphere}
+#### Sphere {#sec:dobj-sphere}
 
 *Arguments*: 
 
@@ -258,7 +258,7 @@ process until it reaches the specified `level`.
 
 A sphere of points defined by a *center* and a *radius*.
 
-#### Streamline {#section:dobj-streamline}
+#### Streamline {#sec:dobj-streamline}
 
 *Arguments*: 
 
@@ -271,7 +271,7 @@ their dimensionality reduced to one, and an ordered list of points at
 an (x,y) tuple along `axis` are available, as is the `t` field, which
 corresponds to a unitless measurement along the ray from start to end.
 
-#### Surface {#section:dobj-surface}
+#### Surface {#sec:dobj-surface}
 
 *Arguments*: 
 
@@ -292,7 +292,7 @@ area, or visualizing in an external program (such as `MeshLab
 and will sample values if a field is requested.  The values are
 interpolated to the center of a given face.
 
-#### Union {#section:dobj-union}
+#### Union {#sec:dobj-union}
 
 *Arguments*: 
 
