--- a/content/30.abstracting_simulation_types.md
+++ b/content/30.abstracting_simulation_types.md
@@ -31,7 +31,7 @@ While we discuss much of the techniques implemented for datasets consisting of m
 These include grids that span multiple parent objects, grids that overlap with coarser data (i.e., AMR), grids that overlap with other grids that provide the same level of resolution of data (i.e., grids at the same AMR level), refinement factors that vary based on level, and edge, and vertex-centered data.
 For the cases of overlapping grids (either on the same or higher refinement levels) masks are generated that indicate which data is considered authoritative.
 
-As noted in [Data Objects](#section:data_objects), the process of selecting points is multi-step, starting at coarse selection that may be at the file level, and proceeding to selection of specific data points that are included in a selector.
+As noted in [Data Objects](#sec:data_objects), the process of selecting points is multi-step, starting at coarse selection that may be at the file level, and proceeding to selection of specific data points that are included in a selector.
 For grid-based data, the coarse selection stage proceeds in an extremely simple fashion, by iterating over flat arrays of left and right grid edges and creating a bitmap of the selected grids.
 Because this method -- while not taking advantage of any data structures of even mild sophistication -- is able to take advantage of pipelining and cache-optimization, we have found that it is sufficiently performant in most geometries up to approximately $10^6$ grid objects.
 In those cases, the distinction between "wide and shallow" grid structures (where refinement occurs essentially everywhere, but not to a great degree) and "thin and deep" grid structures (where refinement occurs in essentially one location but to very high levels), as well as the specific selection process, impact the overall performance.
@@ -43,7 +43,7 @@ Indexing grid data in `yt` is optimized for systems of grids that tend to have l
 In the limit of many more cells than grid objects, this overhead is small, but in cases where the number of grids is $\sim 10^7$ this can become prohibitive.
 These cases are becoming more common even for medium-scale simulations.
 
-To address both the memory overhead and the Python overhead, as well as more generally address potential scalability issues with grid selection, several tentative explorations have been made into an implementation of a more sophisticated "grid visitors" indexing and selection method, drawing on the approach used by the oct-visitors (described [below](#section:octree_analysis)).
+To address both the memory overhead and the Python overhead, as well as more generally address potential scalability issues with grid selection, several tentative explorations have been made into an implementation of a more sophisticated "grid visitors" indexing and selection method, drawing on the approach used by the oct-visitors (described [below](#sec:octree_analysis)).
 These were an attempt to unify the selection methods between octrees and grids, to reduce the overall code duplication and implementation overhead.
 Each process -- selection, copying of data, generation of coordinates -- is represented by an instance of a `GridVisitor` object.
 The tree is recursively traversed, and for all selected points the object is called.
@@ -53,7 +53,7 @@ The spatial-tree optimization substantially increases performance for "wide and 
 However, while such an implementation may be possible, the previous attempts were stymied by performance and maintenance considerations for the grid code, in particular related to the masking of "child" zones in an efficient and straightforward manner.
 A spatial tree is constructed, wherein parent/child relationships are established between grids.
 
-### Octree Analysis {#section:octree_analysis}
+### Octree Analysis {#sec:octree_analysis}
 
 `yt` supports octree-based AMR datasets (primarily RAMSES and ART, but also the output from the octree-based radiative transfer code Hyperion).
 `yt` stores a copy of the octree using a pointer-based approach, where each oct points to its eight children (if refined).
@@ -61,7 +61,7 @@ The octs living at the coarsest level of the simulation are stored as a uniform 
 Each oct is represented as structure that contains the on-file location of the oct (`file_ind`) and its in-memory location (`domain_ind`), the index of the domain it belongs to (`domain`) and a list of pointers to its children (up to eight in 3D). This requires at most 88 bytes per oct.
 
 In order to load data within a given region, a two-step approach is followed.
-First, the cells within the region of interest, as described in [Data Objects](#section:data_objects) are selected. `yt` relies on an oct-visitor machinery combined with selection routines.
+First, the cells within the region of interest, as described in [Data Objects](#sec:data_objects) are selected. `yt` relies on an oct-visitor machinery combined with selection routines.
 The tree is recursively traversed depth-first starting from the root grid, following only those branches that may intersect with the selected region.
 At the tip of each branch, the up-to-eight leaf cells are visited.
 In a first pass, the number of selected cells is computed and in a second pass, the on-file location of their parent oct is stored.
@@ -105,7 +105,7 @@ This resulted in incorrect and unphysical visualizations of hydrodynamic quantit
 These were mitigated in regions of highly-clustered gas particles, but visual artifacts were still clear, as `yt` was applying a visualization suited for finite volume elements to Lagrangian particles.
 
 With the 4.0 series, `yt` no longer utilizes octrees for analyzing, meshing or visualizing SPH data.
-Indexing, for the purposes of fast, memory-efficient access to subsets of the data, is provided by a bitmap index using the Morton indices of the particles, as described in [Bitmap Indexing](#section:point_indexing).
+Indexing, for the purposes of fast, memory-efficient access to subsets of the data, is provided by a bitmap index using the Morton indices of the particles, as described in [Bitmap Indexing](#sec:point_indexing).
 For the purposes of visualization, any quantity requiring smoothing over nearest neighbors is computed on-demand at each pixel in the output image; this provides much higher resolution than the previous method, which was both subject to free parameters and required the construction of a 3D fluid field that was then collapsed to 2D for visualization.
 In many cases, this is also considerably more performant, as constructing a full-domain 3D fluid field is avoided, thus reducing both memory requirements and the number of floating point calculations.
 
@@ -136,4 +136,4 @@ This allows a single analysis script, or package (such as Trident), to utilize a
 
 ### Unstructured Mesh Analysis
 
-### Non-Cartesian Coordinates {#section:noncartesian}
+### Non-Cartesian Coordinates {#sec:noncartesian}
