--- a/content/31.bitmap.md
+++ b/content/31.bitmap.md
@@ -1,4 +1,4 @@
-## Indexing Discrete-Point Datasets {#section:point_indexing}
+## Indexing Discrete-Point Datasets {#sec:point_indexing}
 
 Advances in both hardware and software facilitate astrophysical datasets of growing complexity and size.
 The datasets produced by numerical simulations can currently reach sizes of $\sim$100 Tbytes split across hundreds of files [e.g.
@@ -10,7 +10,7 @@ In order to analyze such large datasets, we need innovative techniques for quick
 We present a technique for using Morton bitmap indexes to map files and accelerate data analysis.
 
 
-### Theory and Background {#section:bitmap_theory}
+### Theory and Background {#sec:bitmap_theory}
 
 #### Domain Partitioning Between Files
 
@@ -138,10 +138,10 @@ This means that any given selection is less likely to contain a collision and it
 
 Increasing the order of the coarse index has the same effect as nesting a second refined index within cells with collisions, but can also increases the size of the resulting map and the time it takes to identify files touched by a selection.
 However, if the order of the coarse index is too small or the order of the refined index too large, this too can increase the cost of a selection in terms of memory and time.
-Section @section:test_order discusses this tradeoff and how to choose index orders.
+Section @sec:test_order discusses this tradeoff and how to choose index orders.
 
 Collisions are more common for file partitioning schemes that are not localized.
-Figure @fig:collision_files shows an example of collisions for the different partitioning schemes discussed in Section @section:decomp.
+Figure @fig:collision_files shows an example of collisions for the different partitioning schemes discussed in Section @sec:decomp.
 
 ![
 Examples of collisions for four different domain partitioning schemes.
@@ -178,9 +178,9 @@ The ghost zone has a width of one Morton cell at an index order of 3 and contain
 However, due to differences in how the domain was partitioned between the files in the four cases, the number of additional ghost files touched by the ghost zone in each case is different.
 This will also depend on the order of the index to which ghost zones are added.
 Ghost zones added at the order of the coarse index will be larger than those added at the order of the refined index and will have a higher probability of touching additional files.
-While including ghost zones is advantageous when neighbor info is needed, it also increases the computational cost of identifying files (see Section @section:tests).
+While including ghost zones is advantageous when neighbor info is needed, it also increases the computational cost of identifying files (see Section @sec:tests).
 
-### Methods {#section:methods}
+### Methods {#sec:methods}
 
 The basic procedure for constructing the bitmap index is as follows:
 
@@ -239,18 +239,18 @@ If ghost zones are desired, the neighbors of cells that intersect the edge of th
 For cells without collisions, the neighbors are added at the coarse bitmap order.
 If there are collisions, the neighbors are added at the refined bitmap order.
 
-### Tests {#section:tests}
+### Tests {#sec:tests}
 
 The utility of using Morton index bitmaps for mapping files to decrease query times was tested on artificial N-body simulation datasets containing $1024^3$ points in three dimensions, distributed between 512 files.
 For each test a Morton index bitmap was constructed for the dataset and used to identify files touched by cube shaped three-dimensional selectors.
 The performance is assessed in terms of the number of files identified and the average time required to identify them across 10 runs.
 If fewer files are touched, fewer files will need to be loaded during analysis of a selected region and the overall fraction of time spent on I/O will be lower.
 If less time is required to identify the files touched by a given selector, more selections can be made using the same computational resources.
-This was done for varying index orders (Section @section:test_order), selector sizes (Section @section:test_size), and partitions of the domain between files (Section @section:test_decomp).
+This was done for varying index orders (Section @sec:test_order), selector sizes (Section @sec:test_size), and partitions of the domain between files (Section @sec:test_decomp).
 
-#### Index Order {#section:test_order}
+#### Index Order {#sec:test_order}
 
-#### Overall Refinement {#section:test_order1}
+#### Overall Refinement {#sec:test_order1}
 
 The order of the Morton indices used to map the files determines the time required to identify files and the number of collisions that will occur between files.
 Higher order indices will result in fewer collisions, but will take longer to query, as seen in Figure @fig:test_order1 Six selectors of varying sizes and positions within the domain where used to identify files based on Morton index bitmaps of varying order.
@@ -269,18 +269,18 @@ However, as the order increases, the number of collisions drops and the file cou
 This translates to a $\sim75$% reduction in the memory and time required for processing files, a significant increase in performance.
 For a 7th order bitmap index, selection requires $>100\times$ the time that the same selection took using a 6th order index, but there is no change in the number of files indicated.
 A 6th order index is sufficient to identify the minimal set of files touched by the selectors in this case because the dataset was partitioned between the files along a 6th order Hilbert space filling curve.
-While it is generally true that the time required to identify files using a bitmap index will increase exponentially with the size of the index, the order of the index that results in the minimal number of files for any dataset will depend upon how the domain is partitioned between files (see Section @section:test_decomp).
+While it is generally true that the time required to identify files using a bitmap index will increase exponentially with the size of the index, the order of the index that results in the minimal number of files for any dataset will depend upon how the domain is partitioned between files (see Section @sec:test_decomp).
 The memory required to store the index for the test dataset scales according to $\propto2^{2k}$, for a $k^{\mbox{th}}$ order index.
 If uncompressed bitmaps had been used instead of EWAH compressed bitmap, the memory would have scaled with the total number of cells contained within the 3-dimensional test domain ($2^{3k}$).
 
-#### Collision Refinement {#section:test_order2}
+#### Collision Refinement {#sec:test_order2}
 
-Increasing the refinement of the primary index does so for the entire domain and, as seen in Section @section:test_order1, can become costly in terms of the memory required to store the bitmap and the time required to perform operations.
+Increasing the refinement of the primary index does so for the entire domain and, as seen in Section @sec:test_order1, can become costly in terms of the memory required to store the bitmap and the time required to perform operations.
 However, it is also possible to increase refinement by nesting a second Morton bitmap index within those cells of the primary index that contain collisions.
 As the nested indexes will contain a smaller portion of the domain and data, they will be less complex and can be compressed more efficiently than the primary index covering the entire domain.
 This enhanced compression means that, although a greater overall number of EWAH compressed bitmaps will need to be utilized (one for the coarse index and one for each collision within the coarse index), less space will be needed to store the bitmap and bitwise operations will be faster.
 Figure @fig:test_order2 shows the results for adding a secondary index of varying order with the overall refinement order of the index (primary index order + secondary index order) held constant at 6.
-The test dataset and selectors applied were the same as in Section @section:test_order1.
+The test dataset and selectors applied were the same as in Section @sec:test_order1.
 
 ![
 Dependence of query time (top), fraction of files selected/cells with collisions (middle), and memory required to store the index (bottom) on the order of the secondary index used to refine collisions.
@@ -299,12 +299,12 @@ The optimal value for the orders of the first and second indexes will depend upo
 The density of data points within the test dataset used here is relatively uniform throughout the domain and does not need a high level of refinement at collisions.
 However, if a datasetwere less uniform with concentrations of points, the optimal order of the second index for performance may be higher.
 
-#### Selector Size {#section:test_size}
+#### Selector Size {#sec:test_size}
 
 The time required to identify files touched by a selection will also depend upon the size of the region being selected.
 Larger selectors will intersect more indices and more files, resulting in more bitmap operations.
 Figure @fig:test_size shows the result from varying the selector size.
-The same test datasetfrom Section @section:test_order was used.
+The same test datasetfrom Section @sec:test_order was used.
 A bitmap index with a 4th order primary Morton index and 2nd order secondary Morton index was used in all cases.
 Each cube selector was placed at the center of the domain and scaled along each dimension to some fraction of the total domain.
 
@@ -324,13 +324,13 @@ If the selector edge is near a file boundary, ghost zones have the potential to 
 For such a highly ordered dataset, the ghost zones will only identify additional files for selectors that are nearing the edges of file boundaries.
 However, queries including ghost zones require slightly more time even when this is not the case.
 
-#### Domain Partitioning {#section:test_decomp}
+#### Domain Partitioning {#sec:test_decomp}
 
-As discussed in Section @section:decomp, a bitmap index is more effective in cases where the domain is partitioned between files in a localized way.
+As discussed in Section @sec:decomp, a bitmap index is more effective in cases where the domain is partitioned between files in a localized way.
 If files contain non-contiguous parts of the domain, contiguous selections will require more files to be loaded.
 Figure @fig:test_decomp shows results for four different partitioning schemes.
 All four data sets cover the same three-dimensional domain with $1024^3$ points split across 512 files.
-The Hilbert dataset is the same one used in previous tests (see Section @section:test_order for a description).
+The Hilbert dataset is the same one used in previous tests (see Section @sec:test_order for a description).
 The Morton dataset is constructed in a similar way to the Hilbert dataset with file partitions occurring along a 6th order Morton curve and including a 10% scatter of points between Morton cells.
 The sliced dataset is partitioned in slices along one dimension with 10% scatter of points between adjacent slices.
 Files in the random dataset contain a random sample of points, uniformly distributed across the domain.
@@ -352,7 +352,7 @@ The sliced dataset performed particularly well in this case because the selector
 
 Overall, this technique offers a considerable improvement in performance over other methods that require reading, evaluating and discarding all of the particles.
 
-### Summary & Discussion {#section:discuss}
+### Summary & Discussion {#sec:discuss}
 
 Mapping files using Morton bitmap indexes speeds up analysis of large datasets split across multiple files by reducing the number of files that need to be loaded in order to perform operations on a subset of the full domain.
 The time required for making selections using the bitmap index is minimal for even large datasets and can be optimized by partitioning the domain between files in a localized way and using an index or indexes of appropriate order for the dataset.
@@ -371,7 +371,7 @@ However, it can also be applied to single files by dividing the file's contents 
 As in the multi-file case, the single file would need to be organized such that chunks were localized within the domain to take full advantage of the bitmaps.
 In addition, while the current implementation of this method is designed for three-dimensional spatial datasets like those produced by astrophysical simulations, the same methods can be applied to non-spatial datasets with arbitrary dimensionality.
 
-### Code {#section:code}
+### Code {#sec:code}
 
 These procedures have been implemented as part of the yt Python package [@Turk20d11a] in order to facilitate the analysis of large astrophysical N-body simulations; currently undergoing review for inclusion in a future version of yt (4.0 or later), our implementation is available at https://bitbucket.org/langmm/yt-bitmap.
 **NOTE: This use to say "3.4 or later". Now it's pretty clear this section is a bit dated. Hasn't the bitmap stuff been merged by now ?**
