--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -1,4 +1,4 @@
-## Visualization and Volume Rendering {#section:vr}
+## Visualization and Volume Rendering {#sec:vr}
 
 The primary method by which researchers interact with their data in `yt` is via visualization; from the standpoint of the library, however, this is a side-effect of the various analysis, regularization and data-processing algorithms that are implemented within `yt`.
 Nearly all of the visualization that is done using `yt` utilizes the matplotlib library for actual deposition of pixels into an image format, although all of the *input* to that deposition is conducted by `yt`.
