--- a/content/40.units_and_quantities.md
+++ b/content/40.units_and_quantities.md
@@ -1,4 +1,4 @@
-## Units and Quantities {#section:units}
+## Units and Quantities {#sec:units}
 
 At a basic level, `yt` is an engine for converting data dumped to disk by a simulation code into a physically meaningful result.
 Attaching units to simulation data makes it possible to perform dimensional analysis on the simulation data, adding additional opportunities for catching errors in a data processing pipeline.
@@ -81,7 +81,7 @@ To obtain on-disk data, a user need only query a data object using an on-disk fi
 Here, the first data object query is returned in code units, while the second is returned in CGS units.
 This is because `("enzo", "Density")` is an on-disk field, while `("gas", "density")` is an internal `yt` field.
 
-### Implementation} {#section:units_implementation}
+### Implementation} {#sec:units_implementation}
 
 Our unit system has 6 base dimensions, `mass`, `length`, `time`, `temperature`, and `angle`.
 The unitless `dimensionless` dimension, which we use to represent scalars is also technically a base dimension, although a trivial one.
@@ -137,11 +137,11 @@ A dictionary lookup table is also attached to the `UnitRegistry` object, providi
 In general, unit registries should only be adjusted inside of a code frontend, since otherwise quantities and arrays might be created with inconsistent unit metadata.
 Once a unit object is created, it will not receive updates if the original unit registry is modified.
 
-### Creating YTArray and YTQuantity instances {#section:creating-ytarray-and-ytquantity-instances}
+### Creating YTArray and YTQuantity instances {#sec:creating-ytarray-and-ytquantity-instances}
 
 There are two ways to create new array and quantity objects: via a constructor, and by multiplying scalar data by a unit quantity.
 
-#### Class Constructor {#section:class-constructor}
+#### Class Constructor {#sec:class-constructor}
 
 The primary internal interface for creating new arrays and quantities is through the class constructor for YTArray.
 The constructor takes three arguments.
@@ -176,7 +176,7 @@ YTArray([ 5.55e+26, 1.11e+27, 1.66e+27]) cm
 
 This example illustrates that the array is being created using `ds.unit_registry`, rather than the `default_unit_registry`, for which `code_length` is equivalent to `cm`.
 
-#### Multiplication {#section:multiplication}
+#### Multiplication {#sec:multiplication}
 
 New `YTArray` and `YTQuantity` instances can also be created by multiplying `YTArray` or `YTQuantity` instances by `float` or `ndarray` instances.
 To make it easier to create arrays using this mechanism, we have populated the `yt.units` namespace with predefined `YTQuantity` instances that correspond to common unit symbol names.
@@ -204,12 +204,12 @@ True
 1000.0 dimensionless
 ```
 
-### Handling code units {#section:handling-code-units}
+### Handling code units {#sec:handling-code-units}
 
 Code units are tightly coupled to on-disk parameters.
 To handle this fact of life, the `yt` unit system can modify, add, and remove unit symbols via the `UnitRegistry`.
 
-#### Associating arrays with a coordinate system {#section:associating-arrays-with-a-coordinate-system}
+#### Associating arrays with a coordinate system {#sec:associating-arrays-with-a-coordinate-system}
 
 To create quantities and arrays in units defined by a simulation coordinate system, we associate a `UnitRegistry` instance with `Dataset` instances.
 This unit registry contains the metadata necessary to convert the array to CGS from some other known unit system and is available via the `unit_registry` attribute that is attached to all `Dataset` instances.
@@ -218,7 +218,7 @@ We have modified the definition for `set_code_units` in the `StaticOutput` base 
 In this new implementation, the predefined `code_mass`, `code_length`, `code_time`, and `code_velocity` symbols are adjusted to the appropriate values and `length_unit`, `time_unit`, `mass_unit`, `velocity_unit` attributes are attached to the `StaticOutput` instance.
 If there are frontend specific code units they should also be defined in subclasses by extending this function.
 
-#### Mixing modified unit registries {#section:mixing-modified-unit-registries}
+#### Mixing modified unit registries {#sec:mixing-modified-unit-registries}
 
 It becomes necessary to consider mixing unit registries whenever data needs to be compared between disparate datasets.
 The most straightforward example where this comes up is a cosmological simulation time series, where the code units evolve with time.
@@ -259,7 +259,7 @@ Results are always consistent when referencing an unambiguous physical coordinat
 3.4783466935e+52 cm**2
 ```
 
-### Handling cosmological units {#section:handling-cosmological-units}
+### Handling cosmological units {#sec:handling-cosmological-units}
 
 If we detect that we are loading a cosmological simulation performed in comoving coordinates, extra comoving units are added to the dataset's unit registry.
 Comoving length unit symbols are still named following the pattern `<length symbol>cm`, i.e.
