--- a/content/10.community_building.md
+++ b/content/10.community_building.md
@@ -1,4 +1,4 @@
-## Community Building {#section:community}
+## Community Building {#sec:community}
 
 Choosing a software package for a particular purpose involves evaluating several differentiating factors; these factors include the functionality of a package, the performance of a package, the user-friendliness, and even the ability of an individual to find help, engage with others and feel a sense of participation.
 **cite something here** The development, fostering and design of the community around `yt` is deemed to be both crucial to the success or failure of `yt`, and in many ways inseparable from its functionality.
@@ -39,7 +39,7 @@ While there are other activities that individuals can participate in, these are 
 The order, flowing from the first to the last, is the typical flow we see for an individual coming to participate in the community.
 The first step is typically to file an issue or bug report (occasionally these are requests for new features), followed by participating in development-focused discussion on mailing lists.
 The next level of engagement typically involves the development of a new piece of functionality, refinement of existing code, or issuing a fix for a bug or issue.
-These take the form of pull requests (described in greater detail [here](#section:development)) that can be reviewed and added to the code base.
+These take the form of pull requests (described in greater detail [here](#sec:development)) that can be reviewed and added to the code base.
 
 The next level of engagement centers around tasks that are not fully-aligned with pragmatic, code-driven scientific inquiry.
 The development of documentation is often viewed as orthogonal to the scientific process, and typically requires an iterative writing process.
@@ -47,7 +47,7 @@ Participation in code review, providing comments, feedback and suggestions to ot
 But, it does arise from a pragmatic (ensuring code reliability) or altruistic (the public good of the software) motivation, and is thus a deeper level of engagement.
 
 The final two activities, drafting enhancement proposals and closing bug reports, are the most engaged, and often the most removed from the academic motivation structure.
-Developing an [enhancement proposal](#section:ytep)  for `yt` means iterating with other developers on the motivation behind and implementation of a large piece of functionality; it requires both motivation to engage with the community and the patience to build consensus among stakeholders.
+Developing an [enhancement proposal](#sec:ytep)  for `yt` means iterating with other developers on the motivation behind and implementation of a large piece of functionality; it requires both motivation to engage with the community and the patience to build consensus among stakeholders.
 Closing bug reports -- and the development work associated with identifying, tracking and fixing bugs -- requires patience and often repeated engagement with stakeholders.
 
 ### Engagement Metrics
@@ -57,5 +57,5 @@ We include here plots of the level of engagement on mailing list discussions and
 ### Governance
 
 Between the publication of the first paper and this paper, the `yt` project instituted a form of governance involving a steering committee, a set of "members" of the project, and a defined process for developing improvements and enhancements (the YTEP, or `yt`-enhancement-proposal process).
-YTEPs are discussed in @section:ytep.
+YTEPs are discussed in @sec:ytep.
 The systems developed account for a number of important procedures, mostly related to decision-making, but do not address pressing community needs such as community standards for conduct, changes in committee composition, sub-project coordination, or the transition of members and developers to "emeritus" status.
