--- a/content/15.development_procedure.md
+++ b/content/15.development_procedure.md
@@ -1,4 +1,4 @@
-## Development Procedure {#section:development}
+## Development Procedure {#sec:development}
 
 `yt` is developed openly.
 During the Spring of 2017, development transitioned from occurring on [Bitbucket](https://bitbucket.org/yt_analysis/) to [GitHub](https://github.com/yt-project/), and the source code management system was changed from [Mercurial](https://www.mercurial-scm.org/) to [git](https://git-scm.org/).
@@ -14,7 +14,7 @@ This three-pronged approach generally has suited the community; the process of b
 However, balancing the needs of a community requiring stable methods for analyzing data against the ease of development suggests that this is a toll worth paying.
 
 In general, the development of `yt` is reasonably top-heavy, with the majority of contributions coming from a core group of individuals.
-We discuss the implications of this on sustainability in Section @section:sustainability, and provide here a graph of the contributions over time.
+We discuss the implications of this on sustainability in Section @sec:sustainability, and provide here a graph of the contributions over time.
 
 <div id="figure-commit-graph"></div>{#fig:commit-graph}
 
@@ -93,7 +93,7 @@ vegaEmbed('#figure-commit-graph', commitGraphSpecification);
 
 </script>
 
-### Unit Testing {#section:unit_testing}
+### Unit Testing {#sec:unit_testing}
 
 The `yt` codebase includes a number of unit tests; although extensive, their existence post-dates the initial development of the code, and they largely work around the extant APIs at the time of their creation.
 Most modern recommendations for developing scientific software emphasize isolated components, well-structured interfaces, and few side effects.
@@ -123,7 +123,7 @@ And for projections, it would mean that integrating the path with a weight of "o
 
 At present, the unit tests in `yt` take a considerable amount of time to run, and are using the nosetests framework.  Modern Python practice is to use the newer pytest framework, and efforts are underway to port `yt` to utilize pytest, and in the process, attempt to reduce overall runtime.
 
-### Answer Testing {#section:answer_testing}
+### Answer Testing {#sec:answer_testing}
 
 The most time-consuming part of the testing process is what we refer to as "answer testing."
 Because so much of `yt` is focused on computing analysis results, and because some of these analysis results simultaneously depend on specific IO routines, selection routines, and many "frontend-specific" pieces of code, we have built a system for ensuring that for a given set of analysis operations, the result of a set of operations does not change beyond a fixed (typically quite small) tolerance.
@@ -196,7 +196,7 @@ This allows drive-by contributions to have their pull requests updated inline by
 Code included in ``yt`` is not required to utilize [type hinting](https://docs.python.org/3/library/typing.html).
 However, new contributions are allowed to include type hinting, and work is underway to develop an ontology of types as well as a base set of utilities and types that would be used both internally, and possibly be made available to external package developers.
 
-### YTEP Process {#section:ytep}
+### YTEP Process {#sec:ytep}
 
 YTEPs, or "`yt`-enhancement proposal" are vehicles for collaborative decision-making in the project.
 Implemented shortly after the first paper on `yt` was released, the YTEP process experienced a fairly pronounced period of usage during the transition between versions 2.0 and 3.0 of `yt`, and has since been utilized considerably less.
