--- a/content/35.viz_and_volrendering.md
+++ b/content/35.viz_and_volrendering.md
@@ -43,7 +43,7 @@ The implementation of the volume rendering is based on integrating a transfer fu
 
 TODO
 
-<canvas id="vrFigure" style="width:100%;height:100%;min-height: 500px;" hidpi="true">
+<canvas id="vrFigure" style="width:100%;height:100%;min-height: 500px;" hidpi="true"></canvas>
 <script type="text/paperscript" canvas="vrFigure" src="images/volume_rendering/vr-figure.js"></script>
 
 #### Octree ray traversal
