Starting derived field writing

--- a/content/25.processing_and_analysis.md
+++ b/content/25.processing_and_analysis.md
@@ -1,8 +1,44 @@
 ## Processing and Analysis of Data
 
+`yt` provides several interfaces for accessing the data available in a given dataset.
+As described in @sec:data_objects, the primary means of accessing data is through "data objects" that apply selections to the dataset.
+These objects present dictionary-like interfaces that return data; below, we describe what options are available for the data that is returned (@sec:field_system), as well as high-level interfaces for applying aggregations and reductions (@sec:arraylike_operations).
 
+### Field System {#sec:field_system}
 
-### Array-like Operations
+In `yt`, there are three types of "fields" that define values at a given spatial location.
+The first of these is an "on-disk" field, representing the raw, unmodified (except potentially up-cast to 64 bit precision) values read from the data storage that defines the dataset, such as files or bucket storage; while `yt` does provide routines for reading these fields, they are passed largely unmodified and so we do not discuss them in depth.
+The second type of field is a "derived field," which is a functional definition of how to process or combine one or more fields that exist in the dataset.
+Finally, providing the closure necessary for these derived fields to be accessed independently of their naming convention are "alias fields" that provide mappings between platform- or format-specific names for fields and those used internally in `yt`.
+This collection of three classes of fields
+
+Fields are also defined by their "sampling type" to distinguish between those fields defined in a volume-filling fashion (i.e., cell-based fields) and those that are defined by discrete samples that may or may not require closure or convolution functions to be applied.
+Fields that are defined as a collection of discrete samples can be combined or filtered differently than those that are defined in a volume-filling manner, as described in @secparticle_filters and @sec:particle_unions.
+
+#### Field Aliases {#sec:field_aliases}
+
+Small differences in naming fields can prove disproportionately challenging for writing platform-neutral analysis code.
+For instance, if one platform names the "density" field `dens` and another refers to it as `Density` (or, as we have seen in one platform, even the unicode character for $\rho$) then any platform-independent derived field that utilizes density must be defined multiple times to refer to this fundamentally identical quantity.
+(An important note here is that in many cases, the reverse problem is true -- some codes may refer to things with the same name but with different underlying definitions, which provides an additional challenge to the analysis process by requiring [disambiguation](https://www.youtube.com/watch?v=WZLkcFns8Ks).)
+
+To address this issue, `yt` defines a set of fundamental fields, along with a naming convention for extensibility, that are provided as "aliases" for the dataset-specific field names.
+This enables a consistent ontology to be defined for fields in `yt`, upon which the remainder of derived fields can rely.
+Typically these are defined by the authors of a given dataset format frontend, wherein a translation or lookup table is provided to match the on-disk fields to those expected by `yt`.
+
+In some cases, it is through a combination of derived and aliased fields that the full set of data is made available to the researcher; for instance, some datasets do not store velocity as a quantity on disk, but instead store momentum.
+In this case, momentum is aliased from the on-disk field to the `yt` field, and then a derived field is generated to seamlessly provide access to the velocity field wherever it is needed.
+
+#### Derived Fields {#sec:derived_fields}
+
+#### Particle Filters {#sec:particle_filters}
+
+#### Particle Unions {#sec:particle_unions}
+
+#### Field Detection {#sec:field_detection}
+
+Determining ahead-of-time the fields that are able to be computed 
+
+### Array-like Operations {#sec:arraylike_operations}
 
 In `yt`, a newly-constructed data selector contains no data -- this enables data selectors for large regions, in extremely large datasets, to be lightweight and cheap to construct.
 By ensuring that these objects don't immediately consume resources, they can be manipulated and operated on in a high-level fashion, without taxing the computational power.
