Fix missing colon in section citation

--- a/content/25.processing_and_analysis.md
+++ b/content/25.processing_and_analysis.md
@@ -13,7 +13,7 @@ Finally, providing the closure necessary for these derived fields to be accessed
 This collection of three classes of fields
 
 Fields are also defined by their "sampling type" to distinguish between those fields defined in a volume-filling fashion (i.e., cell-based fields) and those that are defined by discrete samples that may or may not require closure or convolution functions to be applied.
-Fields that are defined as a collection of discrete samples can be combined or filtered differently than those that are defined in a volume-filling manner, as described in @secparticle_filters and @sec:particle_unions.
+Fields that are defined as a collection of discrete samples can be combined or filtered differently than those that are defined in a volume-filling manner, as described in @sec:particle_filters and @sec:particle_unions.
 
 #### Field Aliases {#sec:field_aliases}
 
