--- a/content/65.extensions.md
+++ b/content/65.extensions.md
@@ -1,5 +1,10 @@
 ## Extensions and Ecosystem
 
+Several packages have been developed that utilize `yt` as an infrastructural component.
+In contrast to the analysis modules, which have typically been built as extensions of `yt`, these extensions utilize `yt` as a framework and typically only rely upon public APIs, often with no changes necessary to upstream `yt`.
+In some cases, `yt` is also an *optional* dependency for the package.
+In most cases, these are described in detail elsewhere, and citations to that external information are included here.
+
 ### Trident
 
 Trident [@doi:10.3847/1538-4357/aa7e2d] is a Python-based open-source tool for post-processing hydrodynamical simulations to produce synthetic absorption spectra and related data.
@@ -8,6 +13,7 @@ In many ways, Trident is the first external package that utilizes `yt` to provid
 ### Powderday
 
 [@doi:10.1038/nature15383]
+[@doi:10.3847/1538-4365/abc487]
 
 ### ytree
 
@@ -15,3 +21,7 @@ Building on `yt` for access to halo catalogs, and implementing a similar system 
 
 ytree provides flexibility in determining the path that a given analysis takes through the graph of merger trees; for instance, it enables the user to select if they wish to follow the "most massive" progenitor halo backwards in time, or even to set their own criteria for this.
 Connecting this to the raw, unprocessed data from the simulation (such as the unsampled particle or cell content that comprises the halos) allows researchers to deepen and guide their analysis based on the physical characteristics of the merger history.
+
+### pyxsim
+
+### AstroBlend
